--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -1,38 +1,46 @@
-.modal-content {
-  background: $java;
-  color: white;
-  border-radius: 0;
-  button.close {
-    border-radius: 50px;
+.modal-dialog {
+  margin: 10%;
+  .modal-content {
     background: $java;
-    position: absolute;
-    right: -20px;
-    top: -20px;
-    height: 40px;
-    width: 40px;
-    font-size: 2rem;
     color: white;
-    cursor: pointer;
-    line-height: 40px;
-    border: 1px solid white;
-    opacity: 1;
-  }
-  .modal-header {
-    text-align: center;
-    border: none;
-  }
-  label {
-    font-weight: normal;
-  }
-  .button-more {
-    background: none;
-    color: white;
-    border: 1px solid white;
-    transition: 1s;
-    font-size: 16px;
-    &:hover {
-      background: white;
-      color: $java;
+    border-radius: 0;
+
+    button.close {
+      border-radius: 50px;
+      background: $java;
+      position: absolute;
+      right: -20px;
+      top: -20px;
+      height: 40px;
+      width: 40px;
+      font-size: 2rem;
+      color: white;
+      cursor: pointer;
+      line-height: 40px;
+      border: 1px solid white;
+      opacity: 1;
+    }
+    .modal-header {
+      text-align: center;
+      border: none;
+      padding-bottom: 0;
+    }
+    .modal-body {
+      padding-top: 0;
+    }
+    label {
+      font-weight: normal;
+    }
+    .button-more {
+      background: none;
+      color: white;
+      border: 1px solid white;
+      transition: 1s;
+      font-size: 16px;
+      &:hover {
+        background: white;
+        color: $java;
+      }
     }
   }
 }
